Complete US 104 Can search the customer using their id or name and only cs can  do that
